--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,5 +1,12 @@
-.row{
+
+.row
+{
     display: flex;
+}
+
+.row-element{
+  flex: 0 0 auto;
+  width: 50%;
 }
 
 .site-footer
@@ -58,7 +65,6 @@
   margin-left:6px;
   margin-right:0;
   border-radius:100%;
-  background-color:var(--eerie-black)
 }
 
 @media (max-width:991px)
@@ -99,8 +105,8 @@
   font-size:13px
 }
 .social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
+  background-color:var(--timberwolf);
+  color:var(--eerie-black);
   font-size:16px;
   display:inline-block;
   line-height:44px;
@@ -112,6 +118,10 @@
   -webkit-transition:all .2s linear;
   -o-transition:all .2s linear;
   transition:all .2s linear
+}
+
+.social-icons a svg{
+  scale:1.4;
 }
 
 .social-icons.size-sm a
